bdr.BDR.scala.error
Compilation error:
BDR:4: error: value update is not a member of String
    if(litMessage() = "R"){
       ^BDR:6: error: not found: value avancer
      avancer()
      ^BDR:8: error: value update is not a member of String
    if(litMessage() = "L"){
       ^BDR:10: error: not found: value avancer
      avancer()
      ^BDR:12: error: value update is not a member of String
    if(litMessage() = "I"){
       ^BDR:15: error: not found: value avancer
      avancer()
      ^BDR:17: error: value update is not a member of String
    if(litMessage() = "A"){
       ^BDR:18: error: not found: value avancer
      avancer()
      ^BDR:20: error: value update is not a member of String
    if(litMessage() = "B"){
       ^BDR:21: error: not found: value avancer
      avancer()
      ^BDR:22: error: not found: value avancer
      avancer()
      ^BDR:24: error: value update is not a member of String
    if(litMessage() = "C"){
       ^BDR:25: error: not found: value avancer
      avancer()
      ^BDR:26: error: not found: value avancer
      avancer()
      ^BDR:27: error: not found: value avancer
      avancer()
      ^BDR:29: error: value update is not a member of String
    if(litMessage() = "Z"){
       ^BDR:30: error: not found: value reculer
      reculer()
      ^BDR:32: error: value update is not a member of String
    if(litMessage() = "Y"){
       ^BDR:33: error: not found: value reculer
      reculer()
      ^BDR:34: error: not found: value reculer
      reculer()
      ^BDR:36: error: value update is not a member of String
    if(litMessage() = "X"){
       ^BDR:37: error: not found: value reculer
      reculer()
      ^BDR:38: error: not found: value reculer
      reculer()
      ^BDR:39: error: not found: value reculer
      reculer()
      ^