bdr.BDR.scala.code
var fini = false
while (fini != true){
  if (estSurMessage){
    if(litMessage() = "R"){
      droite()
      avancer()
    }
    if(litMessage() = "L"){
      gauche()
      avancer()
    }
    if(litMessage() = "I"){
      droite()
      droite()
      avancer()
    }
    if(litMessage() = "A"){
      avancer()
    }
    if(litMessage() = "B"){
      avancer()
      avancer()
    }
    if(litMessage() = "C"){
      avancer()
      avancer()
      avancer()
    }
    if(litMessage() = "Z"){
      reculer()
    }
    if(litMessage() = "Y"){
      reculer()
      reculer()
    }
    if(litMessage() = "X"){
      reculer()
      reculer()
      reculer()
    }
  } else {
    fini = true
  }
}